feat: add send plugin
